Bug 1731678 - Add some generic dark system colors for Windows/Android/standins. r=dholbert

Eventually we should support all of them, but for now they are only used
by native code (unless you enable the color-scheme pref) and these will
be enough.

Differential Revision: https://phabricator.services.mozilla.com/D126737