widget/nsXPLookAndFeel.h
@@ -6,6 +6,7 @@
 #ifndef __nsXPLookAndFeel
 #define __nsXPLookAndFeel
 
+#include "mozilla/Maybe.h"
 #include "mozilla/LookAndFeel.h"
 #include "mozilla/widget/LookAndFeelTypes.h"
 #include "nsTArray.h"
@@ -70,7 +71,15 @@ class nsXPLookAndFeel : public mozilla::LookAndFeel {
  protected:
   nsXPLookAndFeel() = default;
 
-  static nscolor GetStandinForNativeColor(ColorID);
+  static nscolor GetStandinForNativeColor(ColorID, ColorScheme);
+
+  // A platform-agnostic dark-color scheme, for platforms where we don't have
+  // "native" dark colors, like Windows and Android.
+  //
+  // TODO: In the future we should use this as well for standins (i.e.,
+  // resistFingerprinting, etc).
+  static mozilla::Maybe<nscolor> GenericDarkColor(ColorID);
+
   void RecordTelemetry();
   virtual void RecordLookAndFeelSpecificTelemetry() {}
 
